--- a/SI-HexClan/projet/backend/src/main/resources/application.properties
+++ b/SI-HexClan/projet/backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.default_schema=public
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 server.port=8080
 
