--- a/SI2-DREAM-TEAM/projet/pom.xml
+++ b/SI2-DREAM-TEAM/projet/pom.xml
@@ -35,6 +35,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>-->
     </dependencies>
 
     <build>
