--- a/MalESIEA-Airlines/MalEsieaAirline/pom.xml
+++ b/MalESIEA-Airlines/MalEsieaAirline/pom.xml
@@ -7,6 +7,19 @@
     <groupId>org.example</groupId>
     <artifactId>MalEsieaAirline</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations-java5</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.194</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
